# OS_LAB3

./: README.md
LAB3_1/: CMakeLists.txt  main.cpp
LAB3_2/: CMakeLists.txt  main.cpp
